# codetex-mcp

./: .coverage  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  prd.json  progress.md  pyproject.toml  ralph.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  conftest.py  test_ab_comparison_bench.py  test_efficiency_bench.py  test_retrieval_bench.py  test_task_completion_bench.py
benchmarks/fixtures/codetex_mcp/: efficiency_tasks.json  judge_calibration.json  retrieval_queries.json  task_completion_tasks.json
benchmarks/fixtures/flask/: efficiency_tasks.json  retrieval_queries.json
src/codetex_mcp/: __main__.py  exceptions.py
src/codetex_mcp/analysis/: fallback_parser.py  models.py  parser.py  tree_sitter.py
src/codetex_mcp/benchmarks/: ab_stats.py  baselines.py  judge.py  metrics.py  report.py  task_metrics.py  token_metrics.py
src/codetex_mcp/cli/: app.py
src/codetex_mcp/config/: ignore.py  settings.py
src/codetex_mcp/core/: __init__.py  context_store.py  indexer.py  repo_manager.py  search_engine.py  syncer.py
src/codetex_mcp/embeddings/: embedder.py
src/codetex_mcp/git/: operations.py
src/codetex_mcp/llm/: prompts.py  provider.py  rate_limiter.py
src/codetex_mcp/server/: mcp_server.py
src/codetex_mcp/storage/: database.py  files.py  repositories.py  symbols.py  vectors.py
src/codetex_mcp/storage/migrations/: 001_initial.sql
tasks/: architecture.md  prd-code-context-manager.md  prd-evaluation.md
tests/test_analysis/: test_fallback_parser.py  test_models.py  test_parser.py  test_tree_sitter.py
tests/test_benchmarks/: test_ab_stats.py  test_baselines.py  test_judge.py  test_metrics.py  test_report.py  test_task_metrics.py  test_token_metrics.py
tests/test_cli/: test_app.py
tests/test_config/: test_ignore.py  test_settings.py
tests/test_core/: test_app_context.py  test_context_store.py  test_indexer.py  test_repo_manager.py  test_search_engine.py  test_syncer.py
tests/test_embeddings/: test_embedder.py
tests/test_git/: test_operations.py
tests/test_llm/: test_prompts.py  test_provider.py  test_rate_limiter.py
tests/test_server/: test_mcp_server.py
tests/test_storage/: test_database.py  test_files.py  test_repositories.py  test_symbols.py  test_vectors.py
